add new think of about section

--- a/index.html
+++ b/index.html
@@ -86,15 +86,12 @@
                 </div>
             </div>
             <div class="text-container">
-                <p>Lorem ipsum dolor sit amet
-                   consectetur adipisicing elit. Quia, commodi.
-                   Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Accusamus, perspiciatis 
-                    exercitationem quas dolorem sapiente quibusdam 
-                    ut quisquam dicta. Iusto, maiores tempora! Ut
-                     deserunt sapiente quas esse ullam officiis qui
-                      adipisci eos, ab,
-                    pariatur exercitationem error ipsa vero inventore vel molestiae!
+                <p>Energetic and motivated recent pursuing graduate with a Bachelor of Computer
+                   Application from MD College of Technology & Management Amarsanda Barabanki lucknow.
+                   Done three year Diploma in CSE from BTEUP in 2022.
+                   Problem-solving on DSA With Java and analytical skills.
+                   Experience with Java, Python, and SQL. Seeking a software development
+                   position where I can apply my skills and learn new technologies.
                 </p>
             </div>
         </div>
@@ -162,7 +159,7 @@
                     ANd9GcQRmjDv29KBamQQ-jhGUp4pvgXQ7euiSsjUsSTxLuC7f9LNFJsW"
                      alt="checkmark" class="icon"/>
                      <div>
-                        <h3>SASS</h3>
+                        <h3>Bootstrap</h3>
                         <P>Experience</P>
                      </div>
                   </article>
